Fix full-bleed backgrounds for footnotes and footer
Move footer outside container for natural full-width background.
Use -9999px pseudo-element technique for footnotes full-bleed
since they're nested inside a max-width constrained parent.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -172,25 +172,11 @@ a:focus-visible {
 }
 
 .post-footer {
-  position: relative;
   margin-top: 0;
   padding-top: 1.5rem;
   padding-bottom: 3rem;
   border-top: 1px solid #4a6a4a;
-}
-
-.post-footer::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  width: 100vw;
-  height: 100%;
   background: #295229;
-  z-index: -1;
 }
 
 .post-footer a {
@@ -310,12 +296,9 @@ a:focus-visible {
   content: "";
   position: absolute;
   top: 0;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  width: 100vw;
-  height: 100%;
+  bottom: 0;
+  left: -9999px;
+  right: -9999px;
   background: #2e5c2e;
   z-index: -1;
 }
